--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		</header>
 
 		<main class="page">
-			<div class="main-slider">
+			<div class="main-slider active-scroll">
 				<div class="main-slider__body swiper-wrapper">
 					<div class="main-slider__item item-main-slider swiper-slide">
 						<div class="item-main-slider__content">
@@ -103,7 +103,7 @@
 				</div>
 			</div>
 
-			<section class="lots">
+			<section class="lots active-scroll">
 				<div class="lots__container _container">
 					<div class="lots__header block-header">
 						<div class="block-header__title title">
@@ -111,7 +111,6 @@
 							<h2 class="title__main title__main_n">лоты Под аукцион</h2>
 						</div>
 						<div class="block-header__decor block-decor">
-							<!-- <img src="img/lots/decor.svg" alt=""> -->
 							<div class="block-decor__items">
 								<span></span>
 							</div>
@@ -124,8 +123,8 @@
 						</div>
 					</div>
 					<div class="lots__slider slider-lots">
-						<div class="slider-lots__body _swiper">
-							<div class="slider-lots__slide">
+						<div class="slider-lots__body swiper-wrapper">
+							<div class="slider-lots__slide swiper-slide">
 								<div class="lot">
 									<div class="lot__header">
 										<a href="#" class="lot__image ibg">
@@ -156,7 +155,7 @@
 												ставку</span></span></a>
 								</div>
 							</div>
-							<div class="slider-lots__slide">
+							<div class="slider-lots__slide swiper-slide">
 								<div class="lot">
 									<div class="lot__header">
 										<a href="#" class="lot__image ibg">
@@ -187,7 +186,7 @@
 												ставку</span></span></a>
 								</div>
 							</div>
-							<div class="slider-lots__slide">
+							<div class="slider-lots__slide swiper-slide">
 								<div class="lot">
 									<div class="lot__header">
 										<a href="#" class="lot__image ibg">
@@ -381,7 +380,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="categories__text text-categories">
+				<div class="categories__text text-categories active-scroll">
 					<div class="text-categories__container _container">
 						<p>Мы рады приветствовать вас на уникальной Лакшери аукционе, здесь вы сможете найти достойные для
 							себя лоты. Аукцион по продаже недвижимости во многих развитых странах являюется основным
@@ -399,7 +398,7 @@
 				</div>
 			</div>
 
-			<section class="services">
+			<section class="services active-scroll">
 				<div class="services__container _container">
 					<div class="services__header block-header">
 						<div class="block-header__title title">
@@ -450,7 +449,7 @@
 				</div>
 			</section>
 
-			<div class="info">
+			<div class="info active-scroll">
 				<div class="info__container _container">
 					<div class="info__row">
 						<div class="info__column">
